--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,30 @@
+<h1><%=@post.title%></h1><br>
+<h2><%=@post.content%></h2><br>
+
+<ul>
+<%@post.comments.each do |comment|%>
+
+<h3><li><%=comment.content%></li></h3>
+<%end%>
+
+</ul>
+
+<ul>
+<%@post.post_users.each do |user|%>
+
+
+<h3><li><%=link_to user.username, user_path(user)%></li></h3>
+<%end%>
+
+<h1>Create Comment</h1>
+<%=form_for @post.comments.build do |f|%>
+<%=f.hidden_field :post_id%>
+<%=f.text_area :content%>
+<%end%>
+
+</ul>
+
+
+
+
 
