automatically backed up by learn

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -20,6 +20,7 @@
 <%=form_for @post.comments.build do |f|%>
 <%=f.hidden_field :post_id%>
 <%=f.text_area :content%>
+<%=f.submit%>
 <%end%>
 
 </ul>
