--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -20,7 +20,7 @@
 <%=form_for @post.comments.build do |f|%>
 <%=f.hidden_field :post_id%>
 <%=f.text_area :content%>
-<%=f.collection_check_boxes :user_id, User.all, :id, :username, include_blank %>
+<%=f.collection_check_boxes :user_id, User.all, :id, :username, include_blank: Choose User %>
 <%=f.submit%>
 <%end%>
 
