--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -24,6 +24,17 @@
 <%=f.submit%>
 <%end%>
 
+<h1>New User</h1>
+
+ <%= f.fields_for :user, @post.comments.last.build_user do |user_fields|%>
+ <br>
+    Username:
+    <%= user_fields.text_field :username %>
+    Email:
+    <%= user_fields.text_field :email %>
+  <% end %>
+   <%= f.submit %>
+
 </ul>
 
 
