--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -21,6 +21,9 @@
 <%=f.hidden_field :post_id%>
 <%=f.text_area :content%>
 <%=f.collection_select :user_id, User.all, :id, :username, include_blank: "Choose User" %>
+<%= f.fields_for :user, post.user.build do |user_fields| %>
+    <%= user_fields.text_field :name %>
+  <% end %>
 <%=f.submit%>
 
    <%end%>
